docs/.vitepress/theme/assets/css/theme.css
:root {
  --vp-font-family-base: montserrat, -apple-system,blinkmacsystemfont,"Segoe UI",roboto,oxygen,ubuntu,cantarell,"Open Sans","Helvetica Neue",sans-serif;
  --vp-c-brand-1: #319B42;
  --vp-c-brand-2: var(--vp-c-brand-1);
  --vp-button-brand-bg: #319B42;
  --vp-button-brand-hover-bg: #2a8039;
  --vp-home-hero-image-background-image: linear-gradient(-45deg,  var(--vp-c-brand-1) 30%, #070a3080);
  --vp-home-hero-image-filter: blur(30px);
  --vp-badge-tip-bg: var(--vp-c-green-soft);
  --vp-custom-block-tip-bg: var(--vp-c-green-soft);
  --vp-custom-block-tip-code-bg: var(--vp-c-green-soft);
}

html.dark {
  --vp-c-brand-1: #50c463;
  --vp-c-brand-2: #50c463;
}

@media (min-width: 640px) {
  :root {
    --vp-home-hero-image-filter: blur(56px);
  }
}

@media (min-width: 960px) {
  :root {
    --vp-home-hero-image-filter: blur(72px);
  }
}

*::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}

*::-webkit-scrollbar-track {
  background-color: var(--accent);
}

*::-webkit-scrollbar-thumb {
  height: 56px;
  border-radius: 8px;
  border: 0 solid transparent;
  background-clip: content-box;
  background-color: var(--vp-c-brand-1);
}

*::-webkit-scrollbar-thumb:hover {
  background-color: var(--vp-c-brand-1);
}

::selection {
  background: var(--vp-c-brand-1);
  color: var(--vp-sidebar-bg-color);
}

.vp-doc[class*="_modules"] ul li > span.VPBadge {
  transform: translateY(0);
}

.vp-doc[class*="_modules"] ul li > code + code:has(+ span.VPBadge),
.result[href*="/modules"] .vp-doc ul li > code + code:has(+ span.VPBadge, + badge) {
  color: var(--vp-c-important-1);
}

.vp-doc[class*="_modules"] ul ul ul li > ul {
  display: block;
  max-height: 0;
  opacity: 0;
  transform: translateY(-2px);
  margin-top: 0;
  pointer-events: none;
  transition:
    max-height 0.5s ease,
    opacity 0.3s ease,
    transform 0.5s ease,
    margin-top 0.5s ease;
  will-change: max-height, opacity, transform;
}

.vp-doc[class*="_modules"] ul ul ul li:hover > ul,
.vp-doc[class*="_modules"] ul ul ul li:focus-within > ul {
  max-height: 1000px;
  opacity: 1;
  transform: translateY(0);
  margin-top: 0.25rem;
  pointer-events: auto;
}

.vp-doc[class*="_modules"] ul,
.result[href*="/modules"] .vp-doc ul {
  margin-left: calc(-0.82rem - 1px);
  padding-left: calc(2.07rem + 1px);
}

.vp-doc[class*="_modules"] li > ul,
.result[href*="/modules"] .vp-doc li > ul {
  border-left: 1px solid;
  border-color: var(--vp-c-divider);
  margin-left: calc(-0.82rem - 2px);
  transition: border-left 0.5s ease;
}

.vp-doc[class*="_modules"] li:hover > ul {
  border-color: var(--vp-button-brand-hover-bg);
}

.vp-doc[class*="_modules"] li:hover::marker,
.vp-doc[class*="_modules"] li:focus-within::marker {
  color: var(--vp-c-brand-1);
}

